z index fix to prevent vcl from being overlapped by header

--- a/src/platform/site-wide/sass/consolidated-patches.scss
+++ b/src/platform/site-wide/sass/consolidated-patches.scss
@@ -15,7 +15,7 @@
 }
 
 header.merger {
-  z-index: 999;
+  z-index: 300;
 
   .va-crisis-line {
     top: 20px;
